Fix image and video capture display not showing

--- a/src/components/css/ImageForm.module.css
+++ b/src/components/css/ImageForm.module.css
@@ -3,5 +3,5 @@
 	flex: 1;
 	flex-direction: column;
 	justify-content: center;
-	align-items: center;
+	/*align-items: center;*/
 }
